Introduces simple event publishing to RIF job.